# Vertex-Delta-Firmware

./: .gitignore  1.1.4-VellemanVSMarlin.patch  README.md
Marlin/: CMakeLists.txt  Conditionals_LCD.h  Configuration.h  Configuration_adv.h  Configuration_adv_user_override.sample.h  Configuration_user_override.h  G26_Mesh_Validation_Tool.cpp  MarlinConfig.h  Marlin_main.cpp  _Bootscreen.h  boards.h  cardreader.h  configuration_store.cpp  configuration_store.h  language_cz.h  language_en.h  language_fr.h  pins.h  pinsDebug.h  pins_K8800.h  stepper.cpp  ultralcd.cpp  ultralcd.h  ultralcd_impl_DOGM.h
Marlin/cmake/: ArduinoToolchain.cmake
Marlin/cmake/Platform/: Arduino.cmake
U8glib/src/clib/: u8g_com_arduino_st7920_hw_spi.c
Velleman/Patches/: 0001-Crushing-master-with-Marlin-1.1.4-for-serial-diff-ge.patch  0001-Velleman-Marlin-1.1.4.patch
